--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -5,6 +5,7 @@ $spear-mint: #b6e2d3;
 @import './reset.css';
 @import './navbar.scss';
 @import './font.scss';
+@import './personal-info.scss';
 
 
 html {
