finish person info --language

--- a/src/css/personal-info.scss
+++ b/src/css/personal-info.scss
@@ -8,7 +8,8 @@
     display: flex;
     align-items: center;
     font-size: 2.5rem;
-    padding-top: 2rem;
+    margin-left: 8rem;
+    padding: 2rem;
     letter-spacing: 0.5rem;
     writing-mode: vertical-lr;
     color: $spear-mint;
@@ -20,6 +21,8 @@
     background: $spear-mint;
     border-radius: 1.5rem;
     padding: 2rem;
+    min-width: 40rem;
+    margin-right: 20rem;
     flex: 4;
     color: $teal-green;
 
@@ -44,10 +47,24 @@
       display: flex;
       list-style-type: none;
       gap: 1rem;
+    
+      .icon {
+        height: 5rem;
+      }
     }
 
-    img {
-      height: 5rem;
+    .language-container {
+      display: grid;
+      place-items: center;
+      font-weight: bold;
+      
+      .language {
+        font-size: 2rem;
+      }
+
+      .test-result {
+        font-size: 1.5rem;
+      }
     }
   }
 }
