finished projects section

--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -6,6 +6,7 @@ $spear-mint: #b6e2d3;
 @import './navbar.scss';
 @import './font.scss';
 @import './personal-info.scss';
+@import './projects.scss';
 
 
 html {
