add contact and anchor to navbar

--- a/src/css/navbar.scss
+++ b/src/css/navbar.scss
@@ -18,6 +18,13 @@
 
     li {
       list-style-type: none;
+
+      button {
+        background: none;
+        border: none;
+        color: inherit;
+        cursor: pointer;
+      }
     }
   }
 }
