--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -7,6 +7,7 @@ $spear-mint: #b6e2d3;
 @import './font.scss';
 @import './personal-info.scss';
 @import './projects.scss';
+@import './contact.scss';
 
 
 html {
