--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -8,6 +8,7 @@ $spear-mint: #b6e2d3;
 @import './personal-info.scss';
 @import './projects.scss';
 @import './contact.scss';
+@import './foot.scss';
 
 
 html {
