--- a/src/css/font.scss
+++ b/src/css/font.scss
@@ -39,3 +39,45 @@
     font-weight: 100;
     font-style: normal;
 }
+
+@font-face {
+    font-family: Noto Serif TC;
+    src: url(../fonts/NotoSerifTC-Black.otf);
+    font-weight: bolder;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: Noto Serif TC;
+    src: url(../fonts/NotoSerifTC-Bold.otf);
+    font-weight: bold;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: Noto Serif TC;
+    src: url(../fonts/NotoSerifTC-Medium.otf);
+    font-weight: 500;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: Noto Serif TC;
+    src: url(../fonts/NotoSerifTC-Regular.otf);
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: Noto Serif TC;
+    src: url(../fonts/NotoSerifTC-Light.otf);
+    font-weight: 300;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: Noto Serif TC;
+    src: url(../fonts/NotoSerifTC-Thin.otf);
+    font-weight: 100;
+    font-style: normal;
+}
