change font and links

--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -12,5 +12,5 @@ $spear-mint: #b6e2d3;
 
 
 html {
-  font-family: "Noto Serif TC", Noto Sans TC, Microsoft Jhenghei;
+  font-family: Noto Sans TC, Microsoft JhengHei;
 }
