add media query

--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -9,6 +9,7 @@ $spear-mint: #b6e2d3;
 @import './projects.scss';
 @import './contact.scss';
 @import './foot.scss';
+@import './media-query.scss';
 
 
 html {
