--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -10,6 +10,7 @@ $spear-mint: #b6e2d3;
 @import './contact.scss';
 @import './foot.scss';
 @import './media-query.scss';
+// @import url('https://fonts.googleapis.com/css2?family=Neucha&display=swap');
 
 
 html {
