--- a/src/css/projects.scss
+++ b/src/css/projects.scss
@@ -10,7 +10,7 @@
   padding: 2rem;
   gap: 3rem;
   position: relative;
-  overflow-y: hidden;
+  overflow: hidden;
   
   .projects-title {
     font-size: 2.5rem;
